--- a/about.qmd
+++ b/about.qmd
@@ -1,19 +1,13 @@
 ---
 title: "About"
-image: profile.jpg
+image: zzanggu.png
 about:
   template: jolla
   links:
-    - icon: twitter
-      text: Twitter
-      href: https://twitter.com
-    - icon: linkedin
-      text: LinkedIn
-      href: https://linkedin.com
     - icon: github
       text: Github
       href: https://github.com
 
 ---
 
-About this blog
+중석이의 코딩 공부 및  프잭트 업로드 공간입니다.
